# fourth-marketing-brain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.html  config.py  document_parser.py  frontmatter.py  pyproject.toml  server.py  test_write_tools.py
.github/workflows/: deploy.yml
backends/: __init__.py  base.py  cosmos_backend.py  mock_backend.py  sharepoint_backend.py
claude-ai-project/: project-instructions.md
claude-ai-project/skills/: content-researcher.md  rfp-responder.md  sales-enablement.md
docs/: azure-deployment.md  phase-2-sharepoint-upgrade.md
sample_content/: analytics-and-reporting.md  enterprise-platform-playbook.md  integration-guide.md  packaging-comparison.md  value-propositions-by-role.md
sample_content/competitive/: market-positioning.md  objection-handling.md  vs-generic-hcm.md  vs-point-solutions.md  vs-restaurant365.md
sample_content/compliance/: labor-law-compliance.md  security-compliance.md  tip-management-compliance.md
sample_content/integrations/: developer-api-platform.md  integration-guide.md  payroll-hr-integrations.md  pos-integrations.md
sample_content/messaging/: customer-proof-points.md  elevator-pitches.md  enterprise-platform-playbook.md  packaging-comparison.md  packaging-solutions-matrix.md  value-propositions-by-role.md
sample_content/platform/: analytics-and-reporting.md  fourth-hr-payroll-hcm.md  fourth-iq-ai-platform.md  fuego-earned-wage-access.md  hotschedules-product.md  inventory-management.md  (+5 more)
scripts/: generate_playbook_docs.py  manage_content.py  seed_content.py
(+16 files in other folders)
